@@ -1,5 +1,7 @@
 package com.playschool.management.service;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -12,11 +14,15 @@ import com.playschool.management.repository.UserRepository;
 @Service
 public class UserRoleMappingDemoService {
     
-    @Autowired
-    private UserRepository userRepository;
+    private static final Logger logger = LoggerFactory.getLogger(UserRoleMappingDemoService.class);
     
-    @Autowired
-    private RoleRepository roleRepository;
+    private final UserRepository userRepository;
+    private final RoleRepository roleRepository;
+    
+    public UserRoleMappingDemoService(UserRepository userRepository, RoleRepository roleRepository) {
+        this.userRepository = userRepository;
+        this.roleRepository = roleRepository;
+    }
     
     /**
      * This method demonstrates exactly how user.id syncs with role.id
@@ -26,15 +32,15 @@ public class UserRoleMappingDemoService {
         // 1. Get user by ID - this user.id will be used as user_id in junction table
         User user = userRepository.findById(1L).orElse(null);
         if (user != null) {
-            System.out.println("User ID: " + user.getId() + " (this becomes user_id in user_roles table)");
-            System.out.println("Username: " + user.getUsername());
+            logger.info("User ID: {} (this becomes user_id in user_roles table)", user.getId());
+            logger.info("Username: {}", user.getUsername());
         }
         
         // 2. Get role by name - this role.id will be used as role_id in junction table  
         Role adminRole = roleRepository.findByName(RoleName.ROLE_ADMIN).orElse(null);
         if (adminRole != null) {
-            System.out.println("Role ID: " + adminRole.getId() + " (this becomes role_id in user_roles table)");
-            System.out.println("Role Name: " + adminRole.getName());
+            logger.info("Role ID: {} (this becomes role_id in user_roles table)", adminRole.getId());
+            logger.info("Role Name: {}", adminRole.getName());
         }
         // You can also demonstrate with other roles, e.g.:
         // Role driverRole = roleRepository.findByName(RoleName.ROLE_DRIVER).orElse(null);
@@ -45,17 +51,19 @@ public class UserRoleMappingDemoService {
             user.getRoles().add(adminRole);
             userRepository.save(user);
 
-            System.out.println("JPA will execute: INSERT INTO user_roles (user_id, role_id) VALUES ("
-                             + user.getId() + ", " + adminRole.getId() + ")");
+            logger.info("JPA will execute: INSERT INTO user_roles (user_id, role_id) VALUES ({}, {})", 
+                       user.getId(), adminRole.getId());
         }
         
         // 4. Show the actual roles for verification
         if (user != null) {
-            User savedUser = userRepository.findById(user.getId()).get();
-            System.out.println("User " + savedUser.getUsername() + " now has roles:");
-            savedUser.getRoles().forEach(role -> 
-                System.out.println("- Role ID: " + role.getId() + ", Name: " + role.getName())
-            );
+            User savedUser = userRepository.findById(user.getId()).orElse(null);
+            if (savedUser != null) {
+                logger.info("User {} now has roles:", savedUser.getUsername());
+                savedUser.getRoles().forEach(role -> 
+                    logger.info("- Role ID: {}, Name: {}", role.getId(), role.getName())
+                );
+            }
         }
     }
     
@@ -65,17 +73,17 @@ public class UserRoleMappingDemoService {
     public void showJunctionTableMapping(Long userId) {
         User user = userRepository.findById(userId).orElse(null);
         if (user != null) {
-            System.out.println("\nJunction table user_roles records for user " + user.getUsername() + ":");
-            System.out.println("user_id | role_id | (meaning)");
-            System.out.println("--------|---------|----------");
+            logger.info("Junction table user_roles records for user {}", user.getUsername());
+            logger.info("user_id | role_id | (meaning)");
+            logger.info("--------|---------|----------");
             
             user.getRoles().forEach(role -> {
-                System.out.println("%7d | %7d | User '%s' has role '%s'".formatted(
-                        user.getId(),
-                        role.getId(),
+                logger.info("{} | {} | User '{}' has role '{}'",
+                        String.format("%7d", user.getId()),
+                        String.format("%7d", role.getId()),
                         user.getUsername(),
                         role.getName().toString().replace("ROLE_", "")
-                ));
+                );
             });
         }
     }
